maybe fixed bug